kubernetes/cnv-admin-dashboard/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cnv-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnv-dashboard
  template:
    metadata:
      labels:
        app: cnv-dashboard
    spec:
      containers:
        - name: cnv-dashboard
          image: europe-west3-docker.pkg.dev/conversation-opensource/cnv-platform-container/cnv-platform-dashboard:0.22.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
