kubernetes/cnv-admin-dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cnv-dashboard
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: cnv-dashboard
