kubernetes/cnv-admin-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnv-dashboard
  annotations:
    nginx.org/websocket-services: cnv-dashboard
    cert-manager.io/cluster-issuer: letsencrypt-development
    kubernetes.io/ingress.class: "nginx"
    cloud.google.com/neg: '{"ingress": false}'

spec:
  tls: 
    - secretName: secret
      hosts:
        - host
  rules:
    - host: host
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cnv-dashboard
              port: 
                number: 80
